# ResearchAgent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
agent/: ReAct_Agent.py
models/: paper.py
pipeline/: search_pipeline.py
services/: arxiv.py  openalex_search.py  paper_chunker.py  semantic_scholar_enrich.py
tools/: Latex.py  download_arxiv_pdf.py  logging_config.py  pdf_parser.py  search_arxiv_v1.py  search_arxiv_v2.py
