[project]
name = "researchagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=3.0.0",
    "langchain>=1.2.17",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.4",
    "openai>=2.35.1",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
]
